Tidy up index, add link to cargo

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -222,6 +222,11 @@ hr {
   background: url("../images/blacktocat.png") 0 0 no-repeat;
 }
 
+.btn-cargo .icon {
+  opacity: 0.6;
+  background: url("../images/cargo.png") 0 0 no-repeat;
+}
+
 /* Links
    a, a:hover, a:visited
 */
